--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,31 @@ body {
     color: var(--text-color);
 }
 
+.slideshow-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../background-img/image1.png');
+    background-size: cover;
+    background-position: center;
+    animation: slideshow 5s infinite;
+    opacity: 1;
+    animation-duration: 100s;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
+@keyframes slideshow {
+    0% { background-image: url('../background-img/image1.png'); }
+    20% { background-image: url('../background-img/image2.png'); }
+    40% { background-image: url('../background-img/image3.png'); }
+    60% { background-image: url('../background-img/image4.png'); }
+    80% { background-image: url('../background-img/image5.png'); }
+    100% { background-image: url('../background-img/image1.png'); }
+}
+
 .header {
     background-color: var(--background-color);
     padding: 0.75rem 2rem;
